'borrowing' styles and code from todomvc/angular2_es2015. Half the components done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <meta charset="utf-8">
-      <title>A better way to structure Angular directives</title>
+    <meta charset="utf-8">
+    <title>//TODO: A better architecture for Angular 1</title>
   </head>
-  <body ng-app>
-    Nothing here {{'yet' + '!'}}
+  <body ng-app="todos">
+    <todo-app></todo-app>
 
-    <script src="bundle.js"></script>
+    <script src="todos.min.js"></script>
   </body>
 </html>
